--- a/app/scss/partials/_global.scss
+++ b/app/scss/partials/_global.scss
@@ -75,9 +75,9 @@ h4 {
    max-width: initial;
 }
 
-.text-center {
-  text-align: center;
-}
+// .text-center {
+//   text-align: center;
+// }
 
 .v-center {
   display: flex;
