--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -1,3 +1,120 @@
-nav {
+// nav {
+//   background-color: $darkBlue;
+// }
+
+$fillButton: #023e69;
+
+header {
   background-color: $darkBlue;
+  .links {
+    a {
+      text-transform: uppercase;
+      font-size: 13px;
+    }
+    .btn {
+      margin: 0 1em; }
+  }
+}
+
+.menuIcon {
+  width: 25px;
+  height: 2px + 10px*2;
+  cursor: pointer;
+  .bar,
+  .bar:after,
+  .bar:before {
+    width: 25px;
+    height: 2px;
+  }
+  .bar {
+    position: relative;
+    transform: translateY(10px);
+    background: rgba(255, 255, 255, 1);
+    transition: all 0ms 300ms;
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 10px;
+      background: rgba(255, 255, 255, 1);
+      transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 10px;
+      background: rgba(255, 255, 255, 1);
+      transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+    &.animate {
+      background: rgba(255, 255, 255, 0);
+      &:after {
+        top: 0;
+        transform: rotate(45deg);
+        transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+      &:before {
+        bottom: 0;
+        transform: rotate(-45deg);
+        transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+    }
+  }
+}
+
+.title-bar {
+  display: none;
+  height: 76px;
+  align-items: center;
+  background: $darkBlue;
+  img {
+    margin-right: auto;
+  }
+}
+
+.top-bar {
+  display: flex;
+  align-items: center;
+  height: 76px;
+  background-color: $darkBlue;
+  .top-bar-left {
+    margin-right: auto;
+  }
+  .top-bar-right {
+    .menu {
+      background: $darkBlue;
+      li > a {
+        color: rgba(255, 255, 255, 0.6);
+        &:hover {
+          color: rgba(255, 255, 255, 1);
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
+
+/* medium down  */
+@media screen and (max-width: 1000px) {
+  .title-bar {
+    display: flex;
+  }
+  .top-bar {
+    display: none;
+    .menu-text {
+      display: none;
+    }
+    .menu li {
+      display: block;
+    }
+    &.open {
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      .top-bar-right {
+        width: 100%;
+      }
+    }
+  }
 }
