--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -34,6 +34,9 @@ h4 {
 .dark-blue {
   color: #08304c; }
 
+hr {
+  margin: 0; }
+
 /**--- Helpers ---**/
 .fullWidth {
   width: 100%;
@@ -95,6 +98,26 @@ header {
     font-size: 13px; }
   header .links .btn {
     margin: 0 1em; }
+
+.links-wrapper {
+  display: -ms-flexbox;
+  display: flex; }
+  .links-wrapper p,
+  .links-wrapper ul {
+    padding: 1.5rem 0; }
+  .links-wrapper p {
+    margin-right: auto;
+    margin-bottom: 0; }
+  .links-wrapper ul {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-line-pack: center;
+        align-content: center; }
+    .links-wrapper ul li {
+      padding: 0 .5rem;
+      font-size: 15px; }
+      .links-wrapper ul li a {
+        color: #4c4c4c; }
 
 .menuIcon {
   width: 25px;
