--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -16,6 +16,29 @@ header {
   }
 }
 
+.links-wrapper {
+  display: flex;
+  p,
+  ul {
+    padding: 1.5rem 0;
+  }
+  p {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
+  ul {
+    display: flex;
+    align-content: center;
+    li {
+      padding: 0 .5rem;
+      font-size: 15px;
+      a {
+        color: $gray;
+      }
+    }
+  }
+}
+
 .menuIcon {
   width: 25px;
   height: 2px + 10px*2;
