--- a/app/scss/partials/_hero.scss
+++ b/app/scss/partials/_hero.scss
@@ -18,10 +18,25 @@
     border-color: $green;
     margin-bottom: 1rem;
   }
+  .building-wrap {
+    margin-bottom: 4rem;
+  }
+  p {
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 20px;
+    margin-bottom: 1rem;
+  }
+  .line-through {
+
+  }
   .partner-logos {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    // align-items: center;
+    justify-content: space-between;
+    //large-screens
+    // max-width: 541px;
+
   }
 }
 
