--- a/app/scss/partials/_form.scss
+++ b/app/scss/partials/_form.scss
@@ -1,5 +1,13 @@
 .section-form {
   background-color: $offWhite;
+  .content-wrap {
+    @media screen and (min-width: 64em) {
+      width: 80%;
+    }
+  }
+  .row {
+    padding-bottom: 1em;
+  }
   .btn {
     width: 100%;
     padding: 10px 0;
@@ -16,5 +24,54 @@
   p,
   li {
     color: $grayText;
+  }
+  label {
+    color: $grayText;
+  }
+  .heading-divide {
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 3em 0 1em 0;
+  }
+  .partner-logos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media screen and (min-width: 40em) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    img {
+      padding: 1.5em;
+      @media screen and (min-width: 40em) {
+        padding: 0;
+        max-width: 70px;
+      }
+      @media screen and (min-width: 40em) {
+        padding: 0;
+        max-width: 50px;
+      }
+    }
+  }
+  .form {
+    .phone {
+      input {
+        margin-bottom: 0 !important;
+      }
+      .byline {
+        font-size: 13px;
+        color: $lightGray;
+      }
+      .area-code {
+      	position: relative;
+      	&:after {
+      		position: absolute;
+      		display: block;
+      		content: " - ";
+      		top: 40%;
+      		right: -0.25rem;
+      	}
+      }
+    }
   }
 }
