--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -1,5 +1,15 @@
 /**--- Header ---**/
 
+@media screen and (min-width: 40em) {
+
+}
+
+
+@media screen and (min-width: 64em) {
+
+}
+
+
 header {
   background-color: $darkBlue;
   .links {
@@ -8,8 +18,14 @@ header {
       font-size: 13px;
     }
     .btn {
-      margin-left: 1em;
+      margin: 1em;
       color: $white !important;
+      width: 12em;
+      text-align: center;
+      @media screen and (min-width: 64em) {
+        margin: 0 0 0 1em;
+        width: max-content;
+      }
       &-enterprise {
         border: 1px solid $lightGray;
       }
@@ -21,24 +37,48 @@ header {
   }
 }
 
-.links-wrapper {
+.secondary-links-wrapper {
   display: flex;
-  p,
-  ul {
-    padding: 1.5rem 0;
+  flex-direction: column;
+  @media screen and (min-width: 64em) {
+    flex-direction: row;
   }
   p {
-    margin-right: auto;
+    padding-top: 2em;
+    @media screen and (min-width: 64em) {
+      padding-top: 1.5em;
+    }
+  }
+  ul {
+    padding: 1.5em 0;
+    @media screen and (min-width: 64em) {
+      padding: 1.5rem 0;
+    }
+  }
+  p {
+    text-align: center;
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 500;
+    @media screen and (min-width: 64em) {
+      margin-right: auto;
+    }
+
   }
   ul {
     display: flex;
-    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    @media screen and (min-width: 40em) {
+      flex-direction: row;
+      justify-content: space-around;
+    }
     li {
-      padding: 0 .5rem;
       font-size: 15px;
+      padding: 0.5em 0;
+      @media screen and (min-width: 64em) {
+        padding: 0 .5rem;
+      }
       a {
         color: $gray;
       }
@@ -115,6 +155,10 @@ header {
     z-index: 10;
     .menu {
       background: $darkBlue;
+      padding-bottom: 2em;
+      @media screen and (min-width: 64em) {
+        padding-bottom: 0;
+      }
       li > a {
         color: rgba(255, 255, 255, 0.6);
         &:hover {
