--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -152,17 +152,19 @@ hr {
           max-width: 50px; } }
   .section-form .form .phone input {
     margin-bottom: 0 !important; }
-  .section-form .form .phone .byline {
-    font-size: 13px;
-    color: #a9abb0; }
   .section-form .form .phone .area-code {
     position: relative; }
     .section-form .form .phone .area-code:after {
       position: absolute;
       display: block;
       content: " - ";
-      top: 40%;
+      top: 35%;
       right: -0.25rem; }
+  .section-form .form .phone .push {
+    margin-top: 1.5em; }
+  .section-form .form .phone .byline {
+    font-size: 13px;
+    color: #a9abb0; }
 
 /**--- Header ---**/
 header {
